--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Components</title>
 	</head>
-	<body style="background: #000;">
-		<div id="root" ></div>
+	<body style="background: #000; color: #6b7280">
+		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
